# codex

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: main.py
