[tool.poetry]
name = "codex"
version = "0.1.0"
description = "Search tool for Warhammer 40K"
authors = ["Sid Ganesan <siddha.ganesan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.1"}
pre-commit = "^3.3.1"

[tool.poetry.group.dev.dependencies]
rich = "^13.3.5"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
